tests/python/fixtures/compile_error/compile_error.c
/* deliberately invalid C — missing return type */
ft_putchar(char c)
{
	this_does_not_compile;
}
